Fix footer position overlapping content

--- a/style.css
+++ b/style.css
@@ -85,8 +85,7 @@ body {
 .footer.attribution {
   width: 100%;
   margin-inline: auto;
-  position: absolute;
-  bottom: var(--space-s);
+  margin-block: var(--space-m);
 
   display: flex;
   text-align: center;
